<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath/>
    </parent>
    <groupId>vv.pms</groupId>
    <artifactId>SYSC4806-G31-VELOCITY-VULTURES-PROJECT</artifactId>
    <version>MILESTONE-1</version>
    <packaging>jar</packaging>

    <name>SYSC4806-Project-TheVelocityVultures</name>
    <description>SYSC4806-Project-TheVelocityVultures</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <spring-modulith.version>1.4.4</spring-modulith.version>
        <plantuml.generator.version>3.0.1</plantuml.generator.version>
        <plantuml.maven.version>2.0.0</plantuml.maven.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.modulith</groupId>
            <artifactId>spring-modulith-starter-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.modulith</groupId>
            <artifactId>spring-modulith-starter-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.modulith</groupId>
            <artifactId>spring-modulith-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.modulith</groupId>
                <artifactId>spring-modulith-bom</artifactId>
                <version>${spring-modulith.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>

            <plugin>
                <groupId>de.elnarion.maven</groupId>
                <artifactId>plantuml-generator-maven-plugin</artifactId>
                <version>${plantuml.generator.version}</version>
                
                <configuration>
                    <outputDirectory>${project.build.directory}/plantuml-sources</outputDirectory>
                    <blacklistRegexp>.*Application</blacklistRegexp> </configuration>

                <executions>
                    <execution>
                        <id>allocation-diagram</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputFilename>allocation_class_diagram.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>vv.pms.allocation</scanPackage>
                            </scanPackages>
                        </configuration>
                    </execution>

                    <execution>
                        <id>professor-diagram</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputFilename>professor_class_diagram.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>vv.pms.professor</scanPackage>
                            </scanPackages>
                        </configuration>
                    </execution>

                    <execution>
                        <id>project-diagram</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputFilename>project_class_diagram.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>vv.pms.project</scanPackage>
                            </scanPackages>
                        </configuration>
                    </execution>
                    
                    <execution>
                        <id>student-diagram</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputFilename>student_class_diagram.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>vv.pms.student</scanPackage>
                            </scanPackages>
                        </configuration>
                    </execution>

                    <execution>
                        <id>ui-diagram</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputFilename>ui_class_diagram.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>vv.pms.ui</scanPackage>
                            </scanPackages>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.jeluard</groupId>
                <artifactId>plantuml-maven-plugin</artifactId>
                <version>1.2</version> 
                <configuration>
                    <outputDirectory>${project.build.directory}/plantuml-images</outputDirectory>
                    <format>png</format> 
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>net.sourceforge.plantuml</groupId>
                        <artifactId>plantuml</artifactId>
                        <version>1.2024.6</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>render-module-diagrams</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <phase>process-classes</phase> 
                        <configuration>
                            <sourceFiles>
                                <directory>${project.build.directory}/plantuml-sources</directory>
                                <includes>
                                    <include>**/*.puml</include>
                                </includes>
                            </sourceFiles>
                        </configuration>
                    </execution>

                    <execution>
                        <id>render-modulith-diagram</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <phase>verify</phase> 
                        <configuration>
                            <sourceFiles>
                                <directory>${project.build.directory}/spring-modulith-docs</directory>
                                <includes>
                                    <include>components.puml</include>
                                </includes>
                            </sourceFiles>
                            </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>